# oc_api

./: .dockerignore  .gitignore  Dockerfile  README.md  api_oc.py  conf.json  docker_version.txt  gunicorn.conf.py  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml  run_tests.yml  smoketest.yml
html-template/: api.html
src/: ramose.py
src/api/: index_v1.hf  index_v2.hf  indexapi_common.py  indexapi_v1.py  indexapi_v2.py  meta_v1.hf  metaapi.py
test/: conftest.py  start_test_db.ps1  start_test_db.sh  stop_test_db.sh  test_indexapi.py  test_indexapi_v1.py  test_indexapi_v2.py  test_metaapi.py
test/qlever-index-data/: index_subset.nt
